add something about blog

--- a/crypto/做交易要注意的点.md
+++ b/crypto/做交易要注意的点.md
@@ -80,6 +80,6 @@
 
 心态是交易者最重要的一点，没有一个好的心态，无论多少资金最后都可能归零离场。频繁交易冲动交易报复交易，这些都是因为心态受到了影响，从而造成亏损的结果。交易者当心如止水，波澜不惊，只有如此你才能拿住对的单，截断错的单，实现盈利的目的。而这好的心态也是以上的多点融合求来的大同之境。
 
-## 金钱当如粪土
+## 当视金钱如粪土
 
 我的家庭非常一般，父母极其节俭，我厌恶钱，因为钱改变了太多人的样子。因为我讨厌钱，所以我才追求钱，这也许有些矛盾。但是认真想一想，如何能不被钱改变，如何能不让身边人被钱改变，那就是有大量的钱。我常常说钱是冰冷的，而人是有温度的。这个世界上最重要的是人，不是钱，重要的是生活，不是交易。那些每个月为了还房贷工作的人，每个月为了养家工作的人，每个月为了买药工作的人，在这个世界遍地都是。人们的身上都搭着一条巨大的锁链，所以人人脚步沉重，人人郁郁寡欢，世界也变成了灰色。我不想这样，虽然我改变不了世界，但我能改变我的周围。而当有一天我改变这一切的时候，我想说金钱当如粪土。希望你也如此，在有钱的前提下，不要把钱看的太重。
